# Dobs

./: LICENSE.md  README.md  debug_output.txt  pyproject.toml  pytest.ini  rebuild_index.py  start_api.sh  start_streamlit.sh  test_user_queries.py
data/: service_catalog.json
data/storage/: default__vector_store.json  docstore.json  index_store.json
src/: __init__.py
src/api/: __init__.py  endpoints.py  main.py  models.py
src/core/: __init__.py  document_indexer.py  llm_query_parser.py  llm_table_parser.py  metadata_extractor.py  page_chunker.py  page_extractor.py  price_retriever.py  query_parser.py  service_catalog.py
src/ui/: __init__.py  streamlit_app.py
src/utils/: config.py  logger.py
tests/: __init__.py  test_pdf_extractor.py  test_pdf_table_extractor.py  test_price_retriever.py  test_query_parser.py
